--- a/DoAn/ComputerStore/ComputerStore.csproj
+++ b/DoAn/ComputerStore/ComputerStore.csproj
@@ -245,6 +245,7 @@
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\LoginController.cs" />
     <Compile Include="Areas\Admin\Controllers\OrderItemsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\ProductDetailsController.cs" />
     <Compile Include="Areas\User\UserAreaRegistration.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -357,13 +358,15 @@
     <Content Include="Models\DbContext.edmx.diagram">
       <DependentUpon>DbContext.edmx</DependentUpon>
     </Content>
-    <Content Include="Areas\Admin\Views\OrderItems\Create.cshtml" />
     <Content Include="Areas\Admin\Views\OrderItems\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\OrderItems\Details.cshtml" />
-    <Content Include="Areas\Admin\Views\OrderItems\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Web.config" />
     <Content Include="Areas\Admin\Views\OrderItems\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Login\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\ProductDetails\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\ProductDetails\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\ProductDetails\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\ProductDetails\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\ProductDetails\Index.cshtml" />
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
     <Content Include="Scripts\jquery-3.7.0.min.js" />
