--- a/DoAn/ComputerStore/ComputerStore.csproj
+++ b/DoAn/ComputerStore/ComputerStore.csproj
@@ -359,14 +359,13 @@
       <DependentUpon>DbContext.edmx</DependentUpon>
     </Content>
     <Content Include="Areas\Admin\Views\OrderItems\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\Web.config" />
     <Content Include="Areas\Admin\Views\OrderItems\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Login\Index.cshtml" />
     <Content Include="Areas\Admin\Views\ProductDetails\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\ProductDetails\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\ProductDetails\Details.cshtml" />
     <Content Include="Areas\Admin\Views\ProductDetails\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\ProductDetails\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Web.config" />
+    <Content Include="Areas\User\Views\Web.config" />
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
     <Content Include="Scripts\jquery-3.7.0.min.js" />
