--- a/DoAn/ComputerStore/Web.config
+++ b/DoAn/ComputerStore/Web.config
@@ -106,7 +106,7 @@
   </system.codedom>
   <connectionStrings>
 	 <!--Sửa đoạn Connect với Db ở đây-->
-	  <add name="ComputerStoreEntities" connectionString="metadata=res://*/Models.DbContext.csdl|res://*/Models.DbContext.ssdl|res://*/Models.DbContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DINHDUY;initial catalog=ComputerStore;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="ComputerStoreEntities" connectionString="metadata=res://*/Models.DbContext.csdl|res://*/Models.DbContext.ssdl|res://*/Models.DbContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-E2IQRH73\SQLEXPRESS;initial catalog=ComputerStore;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
