--- a/DoAn/ComputerStore/ComputerStore.csproj
+++ b/DoAn/ComputerStore/ComputerStore.csproj
@@ -838,6 +838,7 @@
     <Content Include="Areas\User\Views\OrderItems\AccountInfo.cshtml" />
     <Content Include="Areas\User\Views\OrderItems\AddressList.cshtml" />
     <Content Include="Areas\User\Views\OrderItems\OrderedItems.cshtml" />
+    <Content Include="Areas\User\Views\Home\Search.cshtml" />
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
     <Content Include="Scripts\jquery-3.7.0.min.js" />
