--- a/DoAn/ComputerStore/Web.config
+++ b/DoAn/ComputerStore/Web.config
@@ -9,11 +9,17 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
-	  <add key="owin:AutomaticAppStartup" value="false" />
-	  <add key="webpages:Version" value="3.0.0.0" />
+	<add key="owin:AutomaticAppStartup" value="false" />
+	<add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	<!--CONFIG VNPAY-->
+	  <add key="vnp_Url" value="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"/>
+	  <add key="vnp_Api" value="https://sandbox.vnpayment.vn/merchant_webapi/api/transaction"/>
+	  <add key="vnp_TmnCode" value="MV4XNH7A"/>
+	  <add key="vnp_HashSecret" value="LF3AFG07RJ3Z4Z4K6KFDVSY21SWO1VL5"/>
+	  <add key="vnp_Returnurl" value="https://localhost:44375/vnpay_return"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
